tests/baselines/reference/nodeModulesTripleSlashReferenceModeDeclarationEmit6(module=node18).errors.txt
error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
/uses.ts(1,23): error TS2688: Cannot find type definition file for 'pkg'.
/uses.ts(2,16): error TS2304: Cannot find name 'getInterR'.


!!! error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
==== /index.ts (0 errors) ====
    import obj from "./uses.js"
    export default (obj as typeof obj);
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export {};
    declare global {
        interface ImportInterface {}
        function getInterI(): ImportInterface;
    }
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export {};
    declare global {
        interface RequireInterface {}
        function getInterR(): RequireInterface;
    }
==== /uses.ts (2 errors) ====
    /// <reference types="pkg" preserve="true" />
                          ~~~
!!! error TS2688: Cannot find type definition file for 'pkg'.
    export default getInterR();
                   ~~~~~~~~~
!!! error TS2304: Cannot find name 'getInterR'.